# PFClib

./: AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  pfc-config.in
doc/: Makefile.am  Makefile.in
doxygen/: Doxyfile
example/compress/: Makefile.am  Makefile.in  Makefile_hand  _ReadMe.txt  main.cpp  run.sh
example/compress/IN_Cio/hoge/: vel_0000000010_id000002.sph  vel_0000000010_id000005.sph  vel_0000000020_id000000.sph  vel_0000000020_id000004.sph  vel_0000000020_id000007.sph  vel_0000000060_id000000.sph  vel_0000000060_id000007.sph  vel_0000000080_id000000.sph  vel_0000000080_id000002.sph
example/compress/OUT_Compress_sample/: proc.pfc
example/compress/OUT_Compress_sample/field_data/: vel_id000003.pod
example/compress_cmd/: Makefile.am  Makefile.in  Makefile_hand  Makefile_include.Kei  _ReadMe.txt  main.cpp  run.sh
example/compress_cmd/IN_Cio/: proc.dfi  vel.dfi  veltmp.dfi
example/compress_cmd/IN_Cio/hoge/: veltmp_0000000000.sph  veltmp_0000000010.sph  veltmp_0000000020.sph  veltmp_0000000030.sph
example/compress_cmd/OUT_Compress_sample/: STDOUT_sample  pfc_cntl.in-sample  proc.pfc  veltmp.pfc
example/compress_cmd/OUT_Compress_sample/field_data/: veltmp.coef  veltmp.pod
example/performance_monitor/: _ReadMe.txt  sample.cpp
example/restration_read_at_index/: Makefile.am  Makefile.in  Makefile_hand  Makefile_include.linux-gnu  _ReadMe.txt  main.cpp
example/restration_read_at_index/IN_Compress/: STDOUT.sample
example/restration_read_at_index/IN_Compress/field_data/: vel_id000000.coef  vel_id000002.pod
example/restration_read_at_index/OUT_sample/: STDOUT.sample
example/restration_read_at_index_on_the_fly/: Makefile.am  Makefile.in  Makefile_hand  _ReadMe.txt  compile.Kei.sh  main.cpp  run.sh
example/restration_read_at_index_on_the_fly/IN_Compress/field_data/: vel_id000000.pod  vel_id000001.coef
example/restration_read_at_index_on_the_fly/OUT_sample/: STDOUT.sample
example/restration_read_in_range/: Makefile.am  Makefile.in  Makefile_hand  _ReadMe.txt  go.sh  main.cpp  run.sh
example/restration_read_in_range/IN_Cio/: vel.dfi
example/restration_read_in_range/IN_Cio/hoge/: vel_0000000000_id000004.sph  vel_0000000000_id000006.sph  vel_0000000010_id000000.sph  vel_0000000030_id000000.sph  vel_0000000040_id000002.sph  vel_0000000050_id000006.sph  vel_0000000060_id000004.sph  vel_0000000070_id000001.sph  vel_0000000070_id000005.sph  vel_0000000080_id000007.sph  vel_0000000090_id000006.sph
example/restration_read_in_range/IN_Compress/: vel.pfc
example/restration_read_in_range/IN_Compress/field_data/: vel_id000003.coef
example/restration_read_in_range/OUT_sample/: STDOUT.sample
example/staging/: _ReadMe.txt  proc_1x2x1.txt  run.sh
example/staging/IN_Cio/: vel.dfi
example/staging/IN_Cio/hoge/: vel_0000000010_id000007.sph  vel_0000000030_id000001.sph  vel_0000000040_id000000.sph  vel_0000000050_id000007.sph  vel_0000000070_id000000.sph  vel_0000000080_id000003.sph  vel_0000000090_id000000.sph  vel_0000000090_id000001.sph  vel_0000000090_id000007.sph
include/: PfcCioDfiUtil.h  PfcCoeffTree.h  PfcCompress.h  PfcCompressCioPod.h  PfcCompressCmd.h  PfcCompressCmdElm.h  PfcCompressInfo.h  PfcCompressPod.h  PfcDefine.h  PfcDivision.h  PfcDomain.h  PfcEndianChange.h  PfcFileInfo.h  PfcFilePath.h  PfcFunction.h  PfcMatrix.h  PfcMpiCom.h  PfcPathUtil.h  PfcPerfMon.h  PfcPodFile.h  PfcRegion.h  PfcRestration.h  PfcRestrationRegion.h  PfcRestrationRegionPod.h  PfcTextParser.h  PfcTimeSlice.h  PfcUnitList.h  PfcVersion.h  mpi_stubs.h  pfcVersion.h.in
src/: Makefile.am  Makefile.in  Makefile_hand  PfcCioDfiUtil.cpp  PfcCoeffTree.cpp  PfcCompress.cpp  PfcCompressCioPod.cpp  PfcCompressCmd.cpp  PfcCompressCmdElm.cpp  PfcCompressInfo.cpp  PfcCompressPod.cpp  PfcCompressPod_CalPod.cpp  PfcCompressPod_CheckFinish.cpp  PfcCompressPod_Output.cpp  PfcCompressPod_SwapBinaryData.cpp  PfcCompress_WriteIndexPfcFile.cpp  PfcCompress_WriteProcFile.cpp  PfcDivision.cpp  PfcDomain.cpp  PfcFileInfo.cpp  PfcFilePath.cpp  PfcFunction.cpp  PfcMatrix.cpp  PfcMpiCom.cpp  PfcPathUtil.cpp  PfcPerfMon.cpp  PfcPodFile.cpp  PfcRegion.cpp  PfcRestration.cpp  PfcRestrationRegion.cpp  PfcRestrationRegionPod.cpp  PfcRestrationRegionPod_Expand.cpp  PfcTextParser.cpp  PfcTimeSlice.cpp  PfcUnitList.cpp
utility/staging/include/: ActiveSubDomain.h  PfcFunction.h  Staging_Define.h  Staging_Utility.h  frm_EndianUtil.h  frm_Version.h
utility/staging/src/: ActiveSubDomain.cpp  Makefile.am  Makefile.in  Makefile_hand  Makefile_include.Kei_not-used  Makefile_include.linux-gnu_single  PfcFunction.cpp  Staging.cpp  compile.sh  main.cpp
