#########################################################################
#
# PFClib - Parallel File Compression library
#
# Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
#########################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/PFClib_UserGuide.pdf \
    $(top_builddir)/doc/Reference.pdf
